# ascii-video-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
video_player/: asciiPlayer.cpp  asciiPlayer.hpp  main.cpp
